# devsys

./: .env.example  .gitignore  README.md  config.yaml  config.yaml.example  deploy.sh
backend/: pyproject.toml  requirements.txt
backend/devsys_portal/: __init__.py  audit.py  auth.py  config.py  crypto.py  docs.py  htpasswd.py  main.py  oauth_cfg.py  servers.py  ssh.py  storage.py  tmux.py  vscode.py
backend/devsys_portal/routes/: admin.py  docs_routes.py  me.py  password.py  settings.py  terminal.py  upload.py  vscode_routes.py  workspaces.py
deploy/gateway/: add-email-user.sh  docker-compose.yml  install.sh
deploy/gateway/caddy/: Dockerfile
deploy/login/: error.html  sign_in.html
deploy/relay/: authorize.sh  setup-relay.sh
docs/: 01-guide.md  02-faq.md
docs/10-features/: 01-ssh.md  02-vscode.md  03-workspaces.md  04-upload.md  _index.md
docs/20-admin/: 01-deploy.md  02-users.md  _index.md
docs/20-admin/30-advanced/: 01-architecture.md  02-tls.md  _index.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  icons.tsx  main.tsx  upload.ts
frontend/src/components/: Sidebar.tsx  UploadPanel.tsx
frontend/src/screens/: Admin.tsx  (+5 more)
portal/: app.py
roles/control-plane/: .env.example  Caddyfile  docker-compose.yml  install.sh  reverse-tunnel.service
roles/node/: .env.example  docker-compose.yml  install.sh
roles/relay/: README.md  authorize.sh  setup-relay.sh
scripts/: devsysconf.py  parse_config.py  pull.py  render.py
templates/gpu-container/: machines.auto.tfvars  main.tf  variables.tf
(+4 files in other folders)
